--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
-										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
-										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+										<iconify-icon icon="logos:ansible" width="120" height="120"></iconify-icon>
+										<iconify-icon icon="fluent-mdl2:git-hub-logo" width="100" height="100"></iconify-icon>
+										<iconify-icon icon="logos:jenkins" width="120" height="120"></iconify-icon>
+										<iconify-icon icon="logos:docker-icon" width="120" height="120"></iconify-icon>
+										<iconify-icon icon="logos:kubernetes" width="110" height="110"></iconify-icon>
+										<iconify-icon icon="logos:terraform-icon" width="120" height="120"></iconify-icon>
 									</ul>
 								</div>
 							</section>
@@ -85,6 +85,7 @@
 			<script src="assets/js/browser.min.js"></script>
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="https://code.iconify.design/iconify-icon/1.0.5/iconify-icon.min.js"></script>			
 
 	</body>
 </html>
